# lcsc-kicad

./: README.md  lcsc.kicad_sym  pyproject.toml
lcsc.3dshapes/: FFC-SMD_14P-P0.50_X05B20L14T.wrl  FPC-SMD_14P-L12.5-W5.4-H2.0-P0.50.wrl  FPC-SMD_527462033.wrl  FPC-SMD_L8.6-W54-H2.0-AFC07-S08ECC-00.wrl  QFN-16_L3.0-W3.0-H0.9-P0.50.wrl  QFN-32_L5.0-W5.0-H0.9-P0.50.wrl  SMB_L4.6-W3.6-LS5.3-RD.wrl  SOP-8_L4.9-W3.9-H1.7-LS6.0-P1.30.wrl  SOT-723-3P_L1.2-W0.8-H0.6-LS1.2-P0.40.wrl  SOT-89-5_L4.5-W2.5-H1.5-LS4.1-P1.50.wrl  TQFN-10_L1.6-W1.3-H0.8-P0.50-TL.wrl  UQFN-10_L2.0-W1.5-H0.6-P0.50.wrl  UQFN-16_L2.6-W1.8-H0.5-P0.40-BL.wrl
lcsc.pretty/: CONN-SMD_539160208.kicad_mod  DFN-4_L1.6-W1.2-P0.50-BL.kicad_mod  DFN-8_L2.0-W2.0-P0.50-BL-EP.kicad_mod  FFC-SMD_14P-P0.50_X05B20L14T.kicad_mod  FPC-SMD_14P-L12.5-W5.4-P0.50.kicad_mod  FPC-SMD_527462033.kicad_mod  FPC-SMD_AFC07-S08ECC-00.kicad_mod  LQFN-56_L7.0-W7.0-P0.4-EP.kicad_mod  MSOP-8_L3.0-W3.0-P0.65-LS5.0-BL-EP.kicad_mod  QFN-16_L3.0-W3.0-P0.50-BL-EP1.7.kicad_mod  QFN-32_L5.0-W5.0-P0.50-BL-EP3.4.kicad_mod  SMB_L4.6-W3.6-LS5.3-RD.kicad_mod  SMD_BD5.6-L5.6-W5.6-D3.6.kicad_mod  SOIC-8_L5.3-W5.3-P1.27-LS8.0-BL.kicad_mod  SOP-8_L4.9-W3.9-P1.27-LS6.0-BL-EP.kicad_mod  SOT-23-3_L2.9-W1.3-P1.90-LS2.4-BR.kicad_mod  SOT-23-6_L2.9-W1.6-P0.95-LS2.8-BL.kicad_mod  SOT-23-6_L2.9-W1.6-P0.95-LS2.8-BR.kicad_mod  SOT-723_L1.2-W0.8-P0.40-LS1.2-BR.kicad_mod  SOT-89-5_L4.5-W2.5-P1.50-LS4.5-BR.kicad_mod  TQFN-10_L1.6-W1.3-P0.50-BL.kicad_mod  UQFN-10_L2.0-W1.5-P0.50-BL.kicad_mod  UQFN-16_L2.6-W1.8-P0.40-BL.kicad_mod
